--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vue": "^3.2.23",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "pinia": "^2.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
